--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
                         <div class="navigation-menu-txt">
                             <ul class="menu brackets">
                                 <li>
-                                    <a class="menu-state active" data-ref="menu-1" href="#home">Home</a>
+                                    <a class="menu-state active" data-ref="menu-1" href="#home">Accueil</a>
                                 </li>
                                 <li>
-                                    <a class="menu-state" data-ref="menu-2" href="#about">About</a>
+                                    <a class="menu-state" data-ref="menu-2" href="#about">A propos</a>
                                 </li>
                                 <li>
                                     <a class="menu-state" data-ref="menu-3" href="#services">Services</a>
                                 </li>
                                 <li>
-                                    <a class="menu-state" data-ref="menu-4" href="#works">Works</a>
+                                    <a class="menu-state" data-ref="menu-4" href="#works">Travails</a>
                                 </li>
                                 <li>
-                                    <a class="menu-state" data-ref="menu-5" href="#news">News</a>
+                                    <a class="menu-state" data-ref="menu-5" href="#news">Nouvelles</a>
                                 </li>
                                 <li class="last">
                                     <a class="menu-state" data-ref="menu-6" href="#contact">Contact</a>
@@ -120,7 +120,7 @@
                                                 <div class="swiper-slide-inner-txt">
                                                     <!-- intro subtitle start -->
                                                     <div class="intro-subtitle">
-                                                        Everyone Needs a
+                                                        Tout le monde a besoin
                                                     </div>
                                                     <!-- intro subtitle end -->
                                                     <!-- intro title start -->
