--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
                                                 <div class="swiper-slide-inner-txt">
                                                     <!-- intro subtitle start -->
                                                     <div class="intro-subtitle">
-                                                        Tout le monde a besoin
+                                                        Tout le monde a besoin d'un bon
                                                     </div>
                                                     <!-- intro subtitle end -->
                                                     <!-- intro title start -->
                                                     <div class="intro-title">
-                                                        Line
+                                                        Photographe
                                                     </div>
                                                     <!-- intro title end -->
                                                 </div>
@@ -146,12 +146,12 @@
                                                 <div class="swiper-slide-inner-txt">
                                                     <!-- intro subtitle start -->
                                                     <div class="intro-subtitle">
-                                                        Everyone Needs a
+                                                        Tout le monde a besoin d'un bon
                                                     </div>
                                                     <!-- intro subtitle end -->
                                                     <!-- intro title start -->
                                                     <div class="intro-title">
-                                                        Line
+                                                        Photographe
                                                     </div>
                                                     <!-- intro title end -->
                                                 </div>
@@ -172,12 +172,12 @@
                                                 <div class="swiper-slide-inner-txt">
                                                     <!-- intro subtitle start -->
                                                     <div class="intro-subtitle">
-                                                        Everyone Needs a
+                                                        Tout le monde a besoin d'un bon
                                                     </div>
                                                     <!-- intro subtitle end -->
                                                     <!-- intro title start -->
                                                     <div class="intro-title">
-                                                        Line
+                                                        Photographe
                                                     </div>
                                                     <!-- intro title end -->
                                                 </div>
@@ -198,12 +198,12 @@
                                                 <div class="swiper-slide-inner-txt">
                                                     <!-- intro subtitle start -->
                                                     <div class="intro-subtitle">
-                                                        Everyone Needs a
+                                                        Tout le monde a besoin d'un bon
                                                     </div>
                                                     <!-- intro subtitle end -->
                                                     <!-- intro title start -->
                                                     <div class="intro-title">
-                                                        Line
+                                                        Photographe
                                                     </div>
                                                     <!-- intro title end -->
                                                 </div>
