--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
                 <!-- hero bg end -->
                 <!-- bottom credits start -->
                 <div class="bottom-credits fadeIn-element">
-                    <a class="link-underline" href="#">Wox</a>
-                    &copy; All Rights Reserved.
+                    <a class="link-underline" href="#">Caleb Kiangebeni</a>
+                    &copy; Tout droit reservé.
                 </div>
                 <!-- bottom credits end -->
                 <!-- social icons start -->
