--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             name="viewport">
         
         <!-- style start -->
+        <link rel="shortcut icon" href="/img/panda.png" type="image/x-icon">
         <link href="css/plugins-v1-5.css" media="all" rel="stylesheet" type="text/css">
         <link href="css/style-v1-5.css" media="all" rel="stylesheet" type="text/css">
         <!-- style end -->
