--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             <div class="section" id="section1">
                 <!-- section title start -->
                 <div class="section-title-vertical">
-                    <span>About</span>
+                    <span>A propos</span>
                 </div>
                 <!-- section title end -->
                 <!-- container start -->
@@ -333,7 +333,7 @@
                                         <div class="about-content-inner">
                                             <!-- about content 1 start -->
                                             <h2 class="section-heading section-heading-light spacer-line-vertical-light">
-                                                About
+                                                A propos
                                             </h2>
                                             <p class="about-txt">
                                                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
