--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <meta
             content="width=device-width, initial-scale=1, maximum-scale=1"
             name="viewport">
-        
+
         <!-- style start -->
         <link rel="shortcut icon" href="/img/panda.png" type="image/x-icon">
         <link href="css/plugins-v1-5.css" media="all" rel="stylesheet" type="text/css">
         <link href="css/style-v1-5.css" media="all" rel="stylesheet" type="text/css">
         <!-- style end -->
-        
+
         <!-- google fonts start -->
         <link
             href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900%7COswald:300,400,700"
@@ -336,8 +336,9 @@
                                                 A propos
                                             </h2>
                                             <p class="about-txt">
-                                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                                Ipsum has been the industry's standard dummy text ever
+                                                À travers mon objectif, je capture l'essence de chaque instant, révélant la
+                                                beauté cachée dans chaque détail. Découvrez mon portfolio et plongez dans mon
+                                                univers visuel.
                                                 <a class="link-underline" href="#">since the 1500s</a>.
                                             </p>
                                             <!-- about content 1 start -->
