--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                                                 À travers mon objectif, je capture l'essence de chaque instant, révélant la
                                                 beauté cachée dans chaque détail. Découvrez mon portfolio et plongez dans mon
                                                 univers visuel.
-                                                <a class="link-underline" href="#">since the 1500s</a>.
+                                                <a class="link-underline" href="#">depuis 2018</a>.
                                             </p>
                                             <!-- about content 1 start -->
                                         </div>
