--- a/index.html
+++ b/index.html
@@ -352,33 +352,33 @@
                                         <div class="about-content-inner">
                                             <!-- skills bar start -->
                                             <h3>
-                                                The Know-how
+                                                SAVOIR FAIRE
                                             </h3>
                                             <div class="show-skillbar">
                                                 <!-- skill 1 start -->
                                                 <div class="skillbar" data-percent="95">
-                                                    <span class="skillbar-title">Fashion</span>
+                                                    <span class="skillbar-title">Qualité</span>
                                                     <div class="skillbar-bar"></div>
                                                     <span class="skill-bar-percent"></span>
                                                 </div>
                                                 <!-- skill 1 end -->
                                                 <!-- skill 2 start -->
                                                 <div class="skillbar" data-percent="90">
-                                                    <span class="skillbar-title">Fine-art</span>
+                                                    <span class="skillbar-title">Art fine</span>
                                                     <div class="skillbar-bar"></div>
                                                     <span class="skill-bar-percent"></span>
                                                 </div>
                                                 <!-- skill 2 end -->
                                                 <!-- skill 3 start -->
                                                 <div class="skillbar" data-percent="85">
-                                                    <span class="skillbar-title">Documentary</span>
+                                                    <span class="skillbar-title">Design</span>
                                                     <div class="skillbar-bar"></div>
                                                     <span class="skill-bar-percent"></span>
                                                 </div>
                                                 <!-- skill 3 end -->
                                                 <!-- skill 4 start -->
                                                 <div class="skillbar" data-percent="76">
-                                                    <span class="skillbar-title">Architectural</span>
+                                                    <span class="skillbar-title">Presentation</span>
                                                     <div class="skillbar-bar"></div>
                                                     <span class="skill-bar-percent"></span>
                                                 </div>
