--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                                         <div class="about-content-inner">
                                             <!-- facts counter start -->
                                             <h3>
-                                                The Facts
+                                                Portfolio
                                             </h3>
                                             <div class="facts-counter-wrapper">
                                                 <!-- col start -->
@@ -406,7 +406,7 @@
                                                     </div>
                                                     <div class="facts-counter-description">
                                                         <i class="ion-ios-timer-outline facts-counter-description-img"></i>
-                                                        <span class="facts-counter-title">Years</span>
+                                                        <span class="facts-counter-title">années</span>
                                                     </div>
                                                     <!-- fact 1 end -->
                                                 </div>
@@ -415,11 +415,11 @@
                                                 <div class="col-xs-6 col-sm-6 col-md-3">
                                                     <!-- fact 2 start -->
                                                     <div class="facts-counter-number">
-                                                        53
+                                                        +52
                                                     </div>
                                                     <div class="facts-counter-description">
                                                         <i class="ion-ios-photos-outline facts-counter-description-img"></i>
-                                                        <span class="facts-counter-title">Items</span>
+                                                        <span class="facts-counter-title">Itemes</span>
                                                     </div>
                                                     <!-- fact 2 end -->
                                                 </div>
@@ -444,7 +444,7 @@
                                                 <div class="col-xs-6 col-sm-6 col-md-3">
                                                     <!-- fact 4 start -->
                                                     <div class="facts-counter-number facts-counter-add-space">
-                                                        325
+                                                        12689
                                                     </div>
                                                     <div class="facts-counter-description">
                                                         <i class="ion-ios-people facts-counter-description-img"></i>
