--- a/index.html
+++ b/index.html
@@ -493,9 +493,9 @@
                                             Design
                                         </h2>
                                         <p class="services-txt-dark">
-                                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                            Ipsum has been the industry's standard dummy text ever
-                                            <a class="link-underline link-underline-dark" href="#">since the 1500s</a>.
+                                            Mon approche du design photographique est empreinte d'esthétisme et de
+                                            créativité. Chaque image est soigneusement composée pour capturer l'essence et
+                                            l'émotion de chaque sujet, créant ainsi des visuels saisissants.
                                         </p>
                                         <!-- services content 1 end -->
                                     </div>
