--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                                                 <!-- skill 3 end -->
                                                 <!-- skill 4 start -->
                                                 <div class="skillbar" data-percent="76">
-                                                    <span class="skillbar-title">Presentation</span>
+                                                    <span class="skillbar-title">strategie</span>
                                                     <div class="skillbar-bar"></div>
                                                     <span class="skill-bar-percent"></span>
                                                 </div>
@@ -539,12 +539,12 @@
                                     <div class="center-block">
                                         <!-- services content 2 start -->
                                         <h2 class="section-heading section-heading-light spacer-line-vertical-light">
-                                            Branding
+                                            Strategie
                                         </h2>
                                         <p class="services-txt">
-                                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                            Ipsum has been the industry's standard dummy text ever
-                                            <a class="link-underline" href="#">since the 1500s</a>.
+                                            Ma stratégie photographique repose sur une approche réfléchie et créative.
+                                            J'explore différents angles, jeux de lumière et émotions pour capturer des
+                                            images uniques qui racontent des histoires visuelles puissantes.
                                         </p>
                                         <!-- services content 2 end -->
                                     </div>
