--- a/index.html
+++ b/index.html
@@ -542,9 +542,9 @@
                                             Strategie
                                         </h2>
                                         <p class="services-txt">
-                                            Ma stratégie photographique repose sur une approche réfléchie et créative.
-                                            J'explore différents angles, jeux de lumière et émotions pour capturer des
-                                            images uniques qui racontent des histoires visuelles puissantes.
+                                            Ma stratégie photographique consiste à comprendre les besoins et les désirs de
+                                            mes clients, à créer une atmosphère confortable et à capturer des moments
+                                            authentiques qui reflètent leur essence.
                                         </p>
                                         <!-- services content 2 end -->
                                     </div>
@@ -588,7 +588,7 @@
             <div class="section" id="section3">
                 <!-- section title start -->
                 <div class="section-title-vertical right-side">
-                    <span>Works</span>
+                    <span>Travails</span>
                 </div>
                 <!-- section title end -->
                 <!-- works IMG carousel start -->
@@ -603,7 +603,7 @@
                                     <div class="works-page-img-carousel-text">
                                         <div class="works-page-img-carousel-title">
                                             <h4>
-                                                Simplicity<br>
+                                                Simplicité<br>
                                                 is complex
                                             </h4>
                                         </div>
