--- a/index.html
+++ b/index.html
@@ -1411,7 +1411,7 @@
                                                         class="c-btn fullwidth-liquid c-btn-contact-modal-wrapper-only"
                                                         id="submit"
                                                         type="submit">
-                                                        <span>Submit</span></button>
+                                                        <span>Envoyé</span></button>
                                                 </div>
                                             </form>
                                         </div>
