--- a/index.html
+++ b/index.html
@@ -1235,7 +1235,7 @@
                                             </div>
                                             <div class="text-spacer">
                                                 <a class="c-btn inverse-dark" href="javascript:void(0)">
-                                                    <span>Close</span></a>
+                                                    <span>fermer</span></a>
                                             </div>
                                         </div>
                                         <!-- main txt end -->
@@ -1274,16 +1274,16 @@
                                             <span class="contact-info-mail">
                                                 <a
                                                     class="link-underline link-underline-dark"
-                                                    href="mailto:contact@domainname.com">contact@domainname.com</a>
+                                                    href="mailto:contact@domainname.com">elilikitoko@gmail.com</a>
                                             </span>
-                                            <span>ex Inc.<br>
-                                                Touchdown Dr 1176<br>
-                                                United States</span>
+                                            <span>elilikitoko.<br>
+                                                Kinshasa<br>
+                                                Republique democratique du Congo</span>
                                         </p>
                                         <!-- contact form launcher start -->
                                         <div class="contact-modal-launcher-wrapper">
                                             <a class="button-link contact-modal-launcher">
-                                                <span>Use the form</span>
+                                                <span>Utiliser la forme</span>
                                                 <i class="ion-android-arrow-dropright"></i>
                                             </a>
                                         </div>
@@ -1353,10 +1353,10 @@
                                     <!-- col start -->
                                     <div class="col-lg-12">
                                         <h2 class="section-heading">
-                                            Get in touch
+                                            Prenez contact
                                         </h2>
                                         <p>
-                                            Promise, we won't stay silent
+                                            Promis, nous vous repondrons
                                         </p>
                                     </div>
                                     <!-- col end -->
