--- a/index.html
+++ b/index.html
@@ -865,7 +865,7 @@
                                             <a
                                                 class="c-btn c-btn-works inverse"
                                                 data-lity=""
-                                                href="https://www.youtube.com/watch?v=YM_EFN4CbWc">
+                                                href="#">
                                                 <span>Watch video</span></a>
                                         </div>
                                     </div>
