--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <title>
             EliliKitoko - Photographie Portfolio
         </title>
-        <meta content="" name="description">
-        <meta content="" name="Caleb">
-        <meta content="" name="keywords">
+        <meta content="Découvrez le portfolio de photographie d'EliliKitoko, mettant en valeur son talent et sa passion pour la photographie. Explorez ses différentes séries de photos captivantes et laissez-vous inspirer par son travail artistique." name="description">
+        <meta content="Caleb Kiangebeni" name="author">
+        <meta content="photographie, portfolio, photographe, artiste, images, galerie, séries, talent, passion, inspiration, kinshasa" name="keywords">
         <meta
             content="width=device-width, initial-scale=1, maximum-scale=1"
             name="viewport">
@@ -616,7 +616,7 @@
                                                 class="c-btn c-btn-works inverse popup-photo"
                                                 href="img/works/works-large/works-page-img-carousel-item-large-1.jpg"
                                                 title="Simplicity is complex">
-                                                <span>View image</span></a>
+                                                <span>Voir l'image</span></a>
                                         </div>
                                     </div>
                                 </div>
