--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
                                                 class="c-btn c-btn-works inverse popup-photo"
                                                 href="img/works/works-large/works-page-img-carousel-item-large-2.jpg"
                                                 title="Design is a process">
-                                                <span>View image</span></a>
+                                                <span>Voir l'image</span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -728,7 +728,7 @@
                                                 class="c-btn c-btn-works inverse popup-photo"
                                                 href="img/works/works-large/works-page-img-carousel-item-large-5.jpg"
                                                 title="Simplicity is complex">
-                                                <span>View image</span></a>
+                                                <span>Voir l'image</span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -754,7 +754,7 @@
                                                 class="c-btn c-btn-works inverse popup-photo"
                                                 href="img/works/works-large/works-page-img-carousel-item-large-6.jpg"
                                                 title="Design is a process">
-                                                <span>View image</span></a>
+                                                <span>Voir l'image</span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -784,7 +784,7 @@
                                                 class="c-btn c-btn-works inverse popup-photo"
                                                 href="img/works/works-large/works-page-img-carousel-item-large-7.jpg"
                                                 title="Aesthetic is a decision">
-                                                <span>View image</span></a>
+                                                <span>Voir l'image</span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -810,7 +810,7 @@
                                                 class="c-btn c-btn-works inverse popup-photo"
                                                 href="img/works/works-large/works-page-img-carousel-item-large-8.jpg"
                                                 title="Style is everything">
-                                                <span>View image</span></a>
+                                                <span>Voir l'image</span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -896,7 +896,7 @@
                                                 class="c-btn c-btn-works inverse popup-photo"
                                                 href="img/works/works-large/works-page-img-carousel-item-large-11.jpg"
                                                 title="Aesthetic is a decision">
-                                                <span>View image</span></a>
+                                                <span>Voir l'image</span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -922,7 +922,7 @@
                                                 class="c-btn c-btn-works inverse popup-photo"
                                                 href="img/works/works-large/works-page-img-carousel-item-large-12.jpg"
                                                 title="Style is everything">
-                                                <span>View image</span></a>
+                                                <span>Voir l'image</span></a>
                                         </div>
                                     </div>
                                 </div>
