--- a/index.html
+++ b/index.html
@@ -603,12 +603,12 @@
                                     <div class="works-page-img-carousel-text">
                                         <div class="works-page-img-carousel-title">
                                             <h4>
-                                                Simplicité<br>
-                                                is complex
+                                                Les Couleurs<br>
+                                                de la Vie
                                             </h4>
                                         </div>
                                         <div class="works-page-img-carousel-heading">
-                                            Beauty / Fashion
+                                            Beauté / Bar
                                         </div>
                                         <div class="works-page-img-carousel-content">
                                             <div class="works-page-img-carousel-spacer-top"></div>
@@ -629,12 +629,12 @@
                                     <div class="works-page-img-carousel-text">
                                         <div class="works-page-img-carousel-title">
                                             <h4>
-                                                Design<br>
-                                                is a process
+                                                À Travers<br>
+                                                le Miroir
                                             </h4>
                                         </div>
                                         <div class="works-page-img-carousel-heading">
-                                            People / Life
+                                            Photo / Vie
                                         </div>
                                         <div class="works-page-img-carousel-content">
                                             <div class="works-page-img-carousel-spacer-top"></div>
@@ -659,12 +659,12 @@
                                     <div class="works-page-img-carousel-text">
                                         <div class="works-page-img-carousel-title">
                                             <h4>
-                                                Aesthetic<br>
-                                                is a decision
+                                                Symphonie<br>
+                                                Urbaine
                                             </h4>
                                         </div>
                                         <div class="works-page-img-carousel-heading">
-                                            Royalty / Stock
+                                            Event / Couleur
                                         </div>
                                         <div class="works-page-img-carousel-content">
                                             <div class="works-page-img-carousel-spacer-top"></div>
