--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
                                             <a
                                                 class="c-btn c-btn-works inverse popup-photo"
                                                 href="img/works/works-large/works-page-img-carousel-item-large-1.jpg"
-                                                title="Simplicity is complex">
+                                                title="Les Couleurs de la Vie">
                                                 <span>Voir l'image</span></a>
                                         </div>
                                     </div>
@@ -641,7 +641,7 @@
                                             <a
                                                 class="c-btn c-btn-works inverse popup-photo"
                                                 href="img/works/works-large/works-page-img-carousel-item-large-2.jpg"
-                                                title="Design is a process">
+                                                title="À Travers le Miroir">
                                                 <span>Voir l'image</span></a>
                                         </div>
                                     </div>
@@ -669,10 +669,11 @@
                                         <div class="works-page-img-carousel-content">
                                             <div class="works-page-img-carousel-spacer-top"></div>
                                             <a
-                                                class="c-btn c-btn-works inverse"
+                                                class="c-btn c-btn-works inverse popup-photo"
                                                 data-lity=""
-                                                href="https://vimeo.com/98929509">
-                                                <span>Watch video</span></a>
+                                                href="img/works/works-large/works-page-img-carousel-item-large-3.jpg"
+                                                title="Symphonie Urbaine">
+                                                <span>Voir l'image</span></a>
                                         </div>
                                     </div>
                                 </div>
