--- a/index.html
+++ b/index.html
@@ -686,20 +686,21 @@
                                     <div class="works-page-img-carousel-text">
                                         <div class="works-page-img-carousel-title">
                                             <h4>
-                                                Style<br>
-                                                is everything
+                                                Paysages et<br>
+                                                Architecture
                                             </h4>
                                         </div>
                                         <div class="works-page-img-carousel-heading">
-                                            Culture / Travel
+                                            Culture / Art
                                         </div>
                                         <div class="works-page-img-carousel-content">
                                             <div class="works-page-img-carousel-spacer-top"></div>
                                             <a
-                                                class="c-btn c-btn-works inverse"
+                                                class="c-btn c-btn-works inverse popup-photo"
                                                 data-lity=""
-                                                href="https://www.youtube.com/watch?v=3zXrWmkVjTM">
-                                                <span>Watch video</span></a>
+                                                href="img/works/works-large/works-page-img-carousel-item-large-4.jpg"
+                                                title="Paysages et Architecture">
+                                                <span>Voir l'image</span></a>
                                         </div>
                                     </div>
                                 </div>
