--- a/index.html
+++ b/index.html
@@ -717,19 +717,19 @@
                                     <div class="works-page-img-carousel-text">
                                         <div class="works-page-img-carousel-title">
                                             <h4>
-                                                Simplicity<br>
-                                                is complex
+                                                Ombres et<br>
+                                                Contraste
                                             </h4>
                                         </div>
                                         <div class="works-page-img-carousel-heading">
-                                            Beauty / Fashion
+                                            Architecture / Art
                                         </div>
                                         <div class="works-page-img-carousel-content">
                                             <div class="works-page-img-carousel-spacer-top"></div>
                                             <a
                                                 class="c-btn c-btn-works inverse popup-photo"
                                                 href="img/works/works-large/works-page-img-carousel-item-large-5.jpg"
-                                                title="Simplicity is complex">
+                                                title="Ombres et Contraste">
                                                 <span>Voir l'image</span></a>
                                         </div>
                                     </div>
