--- a/index.html
+++ b/index.html
@@ -743,19 +743,19 @@
                                     <div class="works-page-img-carousel-text">
                                         <div class="works-page-img-carousel-title">
                                             <h4>
-                                                Design<br>
-                                                is a process
+                                                Horizons <br>
+                                                Infinis
                                             </h4>
                                         </div>
                                         <div class="works-page-img-carousel-heading">
-                                            People / Life
+                                            Culture / Retro
                                         </div>
                                         <div class="works-page-img-carousel-content">
                                             <div class="works-page-img-carousel-spacer-top"></div>
                                             <a
                                                 class="c-btn c-btn-works inverse popup-photo"
                                                 href="img/works/works-large/works-page-img-carousel-item-large-6.jpg"
-                                                title="Design is a process">
+                                                title="Horizons Infinis">
                                                 <span>Voir l'image</span></a>
                                         </div>
                                     </div>
