--- a/index.html
+++ b/index.html
@@ -773,19 +773,19 @@
                                     <div class="works-page-img-carousel-text">
                                         <div class="works-page-img-carousel-title">
                                             <h4>
-                                                Aesthetic<br>
-                                                is a decision
+                                                Portraits <br>
+                                                et Émotions
                                             </h4>
                                         </div>
                                         <div class="works-page-img-carousel-heading">
-                                            Royalty / Stock
+                                            Art / Noir
                                         </div>
                                         <div class="works-page-img-carousel-content">
                                             <div class="works-page-img-carousel-spacer-top"></div>
                                             <a
                                                 class="c-btn c-btn-works inverse popup-photo"
                                                 href="img/works/works-large/works-page-img-carousel-item-large-7.jpg"
-                                                title="Aesthetic is a decision">
+                                                title="Portraits et Émotions">
                                                 <span>Voir l'image</span></a>
                                         </div>
                                     </div>
