--- a/index.html
+++ b/index.html
@@ -799,19 +799,19 @@
                                     <div class="works-page-img-carousel-text">
                                         <div class="works-page-img-carousel-title">
                                             <h4>
-                                                Style<br>
-                                                is everything
+                                                Abstrait <br>
+                                                et Surréalisme
                                             </h4>
                                         </div>
                                         <div class="works-page-img-carousel-heading">
-                                            Culture / Travel
+                                            Culture / Art
                                         </div>
                                         <div class="works-page-img-carousel-content">
                                             <div class="works-page-img-carousel-spacer-top"></div>
                                             <a
                                                 class="c-btn c-btn-works inverse popup-photo"
                                                 href="img/works/works-large/works-page-img-carousel-item-large-8.jpg"
-                                                title="Style is everything">
+                                                title="Abstrait et Surréalisme">
                                                 <span>Voir l'image</span></a>
                                         </div>
                                     </div>
